fix logo and nav on iphone

--- a/wp-content/themes/roots/assets/less/layouts/_header.less
+++ b/wp-content/themes/roots/assets/less/layouts/_header.less
@@ -48,7 +48,8 @@
   margin-top: 10px;
 
 	@media(@xs) { 
-  	width: 250px;
+  	width: 200px;
+    padding-right: 20px;
   }
 
 }
